[package]
name        = "sacredvote-pq-bench-script"
version     = "0.1.0"
edition     = "2021"
license     = "Apache-2.0"
description = "Host-side prover for the SP1 PQ-bench stub program"

[[bin]]
name = "bench"
path = "src/main.rs"

[dependencies]
sp1-sdk = "5.2"

# Same crypto crates as the program — we use them on the host to mint
# fresh test fixtures (a real ML-KEM-768 keypair + ciphertext, a real
# ML-DSA-65 keypair + signature) so the program is decapsulating /
# verifying values that actually validate. We could ship pre-computed
# hex fixtures, but minting fresh ones every run guards against bit-rot.
ml-kem  = "0.2"
ml-dsa  = "0.0.4"
sha2    = "0.10"
hkdf    = "0.12"
aes-gcm = "0.10"
rand    = "0.8"

# Wall-clock timing + JSON for results.
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
clap       = { version = "4", features = ["derive"] }
anyhow     = "1"
